[bumpversion]
commit = True
tag = True
current_version = 1.0.2
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?P<release>[a-z]+)?
serialize = 
	{major}.{minor}.{patch}{release}
	{major}.{minor}.{patch}

[bumpversion:file:cyksuid/__version__.py]

[bumpversion:part:release]
optional_value = rc
values = 
	dev
	rc

[metadata]
license_file = LICENSE

